Added basic structure to about page
Also added some default values to all padding and margin to 0

--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css">
+
+  <link rel="stylesheet" href="stylesheets/navbar.css">
+  <link rel="stylesheet" href="stylesheets/firstPage.css">
+  <link rel="stylesheet" href="stylesheets/about.css">
+  <link rel="stylesheet" href="stylesheets/features.css">
+  <link rel="stylesheet" href="stylesheets/footer.css">
+  <link rel="stylesheet" href="stylesheets/product.css">
+  <link rel="stylesheet" href="stylesheets/style.css">
+  <link rel="stylesheet" href="stylesheets/video.css">
+
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
 
@@ -30,8 +39,18 @@
 
 <!-------------------- about page -->
   <div class="about">
-
-
+    <div class="about-left-image">
+      en fin bild
+    </div>
+    <div class="about-right-text">
+      OUR IDEA
+    </div>
+    <div class="about-left-text">
+      YOUR SLEEP
+    </div>
+    <div class="about-right-image">
+      en till fin bild
+    </div>
   </div>
   <!--------------------about page end -->
 
