Added placeholders and divs on about page

--- a/index.html
+++ b/index.html
@@ -39,17 +39,21 @@
 
 <!-------------------- about page -->
   <div class="about">
-    <div class="about-left-image">
-      en fin bild
+    <div class="about-left-side">
+      <div class="about-left-image">
+        en fin bild
+      </div>
+      <div class="about-left-text">
+        YOUR SLEEP
+      </div>
     </div>
-    <div class="about-right-text">
-      OUR IDEA
-    </div>
-    <div class="about-left-text">
-      YOUR SLEEP
-    </div>
-    <div class="about-right-image">
-      en till fin bild
+    <div class="about-right-side">
+      <div class="about-right-text">
+        OUR IDEA
+      </div>
+      <div class="about-right-image">
+        en till fin bild
+      </div>
     </div>
   </div>
   <!--------------------about page end -->
