Added some text into the first div in the about about

--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
         en fin bild
       </div>
       <div class="about-left-text">
-        YOUR SLEEP
+        EASING YOU INTO THE DAY
+        <p>The Barisieur is a premium alarm clock that eases you into your
+           morning with the soothing sounds of bubbling water along with the
+           smell of the freshly brewed coffee or loose leaf tea.</p>
       </div>
     </div>
     <div class="about-right-side">
