--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
   </div>
 <!--first page -->
   <div class="first-page">
-    <img src="vd_bilder/firstpage.jpg" alt="">
+    <div class="title">Barisieur</div>
+    <img src="image/firstpage.jpg" alt="">
   </div>
 <!-- first page end -->
 
