Added css Grid to the about page

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
 <!-- about page -->
   <div class="about">
-    <div class="about-left-side">
       <div class="about-left-image">
-        en fin bild
+        <!-- <img src="image/hand.jpg" alt="hand" width="100%">
+        en fin bild -->
       </div>
       <div class="about-left-text">
         EASING YOU INTO THE DAY
@@ -51,15 +51,12 @@
            morning with the soothing sounds of bubbling water along with the
            smell of the freshly brewed coffee or loose leaf tea.</p>
       </div>
-    </div>
-    <div class="about-right-side">
       <div class="about-right-text">
         OUR IDEA
       </div>
       <div class="about-right-image">
         en till fin bild
       </div>
-    </div>
   </div>
   <!---about page end -->
 
