--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
   <div class="features">
 
   </div>
-  <!--------------------features page end-->
+  <!--features page end-->
 
-  <!--------------------product page-->
+  <!--product page-->
   <div class="product">
 
   </div>
