--- a/index.html
+++ b/index.html
@@ -47,16 +47,20 @@
         en fin bild -->
       </div>
       <div class="about-left-text">
-        EASING YOU INTO THE DAY
+        Easing you into the day
         <p>The Barisieur is a premium alarm clock that eases you into your
            morning with the soothing sounds of bubbling water along with the
            smell of the freshly brewed coffee or loose leaf tea.</p>
       </div>
       <div class="about-right-text">
-        OUR IDEA
+        Influenced by your rituals
+        <p>Inspired by a combination of the modern ritual of filter coffee with
+           the iconic vinyl record player, encouraging a nostalgic experience
+           with the user. The design was born with a digital detox in mind,
+           where the design language balances between simplicity and mystified
+           alchemy.</p>
       </div>
       <div class="about-right-image">
-        en till fin bild
       </div>
   </div>
   <!---about page end -->
