--- a/index.html
+++ b/index.html
@@ -66,9 +66,35 @@
   <!---about page end -->
 
   <!---features page -->
-  <div class="features">
+  
+    <div class="features">
 
-  </div>
+      <div class="third-page">
+        <h3>Features</h3>
+      </div>
+
+      <div class="image-features">
+        <img src="image\detail_white.jpg" alt="featureimg">
+        <img src="image\hand.jpg" alt="featureimg">
+        <img src="image\detail_coffe.jpg" alt="featureimg">
+      </div>
+
+      <div class="text-boxes">
+        <div class="text1">
+          <h3>Coffee Hatch</h3>
+          <p>The Barisieur is a premium alarm clock that eases you into </p>
+        </div>
+        <div class="text2">
+          <h3>Alarm Clock</h3>
+          <p>The Barisieur is a premium alarm clock that eases you </p>
+        </div>
+        <div class="text3">
+          <h3>Prepareable</h3>
+          <p>The Barisieur is a premium alarm clock that eases you .</p>
+        </div>
+      </div>
+
+    </div>
   <!--features page end-->
 
   <!--product page-->
