--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <!---about page end -->
 
   <!---features page -->
-  
+
     <div class="features">
 
       <div class="third-page">
@@ -115,6 +115,6 @@
   </div>
     <!--------------------footer page end-->
 
-
+    <script src="js/script.js" type="text/javascript"></script>
 </body>
 </html>
