--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     </div>
 
   </div>
+  <div class="progress-container">
+    <div class="progress-bar" id="myBar"></div>
+  </div>
 <!--first page -->
   <div class="first-page">
     <div class="title">Barisieur</div>
@@ -66,7 +69,7 @@
   <!---about page end -->
 
   <!---features page -->
-  
+
     <div class="features">
 
       <div class="third-page">
