Adkusted more text styles to about

--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
       <a href="#">Features</a>
       <a href="#">Products</a>
     </div>
-
-  </div>
   <div class="progress-container">
-    <div class="progress-bar" id="myBar"></div>
+   <div class="progress-bar" id="myBar"></div>
+ </div>
   </div>
 <!--first page -->
   <div class="first-page">
@@ -50,13 +49,13 @@
         en fin bild -->
       </div>
       <div class="about-left-text">
-        Easing you into the day
+        <h1>Easing you into the day</h1>
         <p>The Barisieur is a premium alarm clock that eases you into your
            morning with the soothing sounds of bubbling water along with the
            smell of the freshly brewed coffee or loose leaf tea.</p>
       </div>
       <div class="about-right-text">
-        Influenced by your rituals
+        <h1>Influenced by your rituals</h1>
         <p>Inspired by a combination of the modern ritual of filter coffee with
            the iconic vinyl record player, encouraging a nostalgic experience
            with the user. The design was born with a digital detox in mind,
