add products page

--- a/index.html
+++ b/index.html
@@ -100,9 +100,29 @@
   <!--features page end-->
 
   <!--product page-->
-  <div class="product">
+  <div class="products">
+  <div class="title-buy"><h3>Products</h3></div>
 
+<div class="buy">
+  <div class="white">
+    <img src="image\white.jpg" alt="white-machine">
+    <div class="text-white">
+      <h3>White 399$</h3>
+      <p>The Barisieur is a premium alarm clock that eases you into your mods of brewed coffee or.</p>
+    </div>
+      <button type="button" class="buy-white">Buy</button>
   </div>
+    <div class="black">
+      <img src="image\black.jpg" alt="white-machine">
+      <div class="text-black">
+        <h3>Black 399$</h3>
+        <p>The Barisieur is a premium alarm clock that eases you into your mods of brewed coffee or.</p>
+      </div>
+        <button type="button" class="buy-black">Buy</button>
+  </div>
+</div>
+</div>
+
   <!--------------------product page end-->
 
   <!--------------------video page-->
