--- a/index.html
+++ b/index.html
@@ -107,7 +107,16 @@
 
   <!--------------------video page-->
   <div class="video">
+    <div class="video-container">
+      <div class="video-player">
+        <video width="100%" controls>
+      <source src="https://www.youtube.com/watch?v=HrPF6EE-y0s">
+      <source src=".ogg" type="video/ogg">
+      Your browser does not support HTML5 video.
+    </video>
+      </div>
 
+    </div>
   </div>
   <!--------------------video page-->
 
