--- a/index.html
+++ b/index.html
@@ -129,11 +129,7 @@
   <div class="video">
     <div class="video-container">
       <div class="video-player">
-        <video width="100%" controls>
-      <source src="https://www.youtube.com/watch?v=HrPF6EE-y0s">
-      <source src=".ogg" type="video/ogg">
-      Your browser does not support HTML5 video.
-    </video>
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/HrPF6EE-y0s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
 
     </div>
