--- a/index.html
+++ b/index.html
@@ -137,8 +137,12 @@
   <!--------------------video page-->
 
     <!--------------------footer page-->
-  <div class="footer">
-
+    <div class="footer">
+    <form action="/action_page.php">
+  <input type="text" name="FirstName"><br>
+  <input type="text" name="LastName" ><br>
+  <input type="submit" value="Follow us">
+  </form>
   </div>
     <!--------------------footer page end-->
 
