--- a/index.html
+++ b/index.html
@@ -129,7 +129,9 @@
   <div class="video">
     <div class="video-container">
       <div class="video-player">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/HrPF6EE-y0s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/HrPF6EE-y0s"
+        frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;
+         picture-in-picture" allowfullscreen></iframe>
       </div>
 
     </div>
