--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
 
   <title>Document</title>
 </head>
-<body>
 
-  <div class="navbar">
+  <!-- <div class="navbar">
     <div class="navbar-left">
       <a href="#">Home</a>
       <a href="#">About</a>
@@ -34,7 +33,33 @@
   <div class="progress-container">
    <div class="progress-bar" id="myBar"></div>
  </div>
-  </div>
+  </div> -->
+  <body>
+    <nav class="navbar">
+        <span class="navbar-toggle" id="js-navbar-toggle">
+          <svg width="36" height="24" viewBox="0 0 36 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <rect width="36" height="3.0" rx="1.8" fill="#ffffff"/>
+          <rect y="9.6001" width="36" height="3.0" rx="1.8" fill="#ffffff"/>
+          <rect y="20.3999" width="36" height="3.0" rx="1.8" fill="#ffffff"/>
+        </svg>
+
+        </span>
+        <a href="#" class="logo">Barisieur</a>
+        <ul class="main-nav" id="js-menu">
+            <li>
+                <a href="#" class="nav-links">Home</a>
+            </li>
+            <li>
+                <a href="#" class="nav-links">Products</a>
+            </li>
+            <li>
+                <a href="#" class="nav-links">About Us</a>
+            </li>
+            <li>
+                <a href="#" class="nav-links">Contact Us</a>
+            </li>
+        </ul>
+    </nav>
 <!--first page -->
 <div class="first-page">
 <div class="title">Barisieur</div>
@@ -138,6 +163,9 @@
   <input type="text" name="LastName" ><br>
   <input type="submit" value="Follow us">
   </form>
+  <div class="hr-footer">
+    <hr>
+  </div>
   </div>
     <!--------------------footer page end-->
 
