try to remove the white space right side

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
  </div>
   </div> -->
   <body>
+
     <nav class="navbar">
         <span class="navbar-toggle" id="js-navbar-toggle">
           <svg width="36" height="24" viewBox="0 0 36 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -155,13 +156,12 @@
     </div>
   </div>
   <!--------------------video page-->
-
     <!--------------------footer page-->
     <div class="footer">
     <form action="/action_page.php">
   <input type="text" name="FirstName"><br>
   <input type="text" name="LastName" ><br>
-  <input type="submit" value="Follow us">
+  <input type="submit" value="Sign up">
   </form>
   <div class="hr-footer">
     <hr>
