mobile page products

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 </div>
   <!--features page end-->
 
+
   <!--product page-->
   <div class="products">
   <div class="title-buy"><h3>Products</h3></div>
@@ -161,7 +162,7 @@
     <form action="/action_page.php">
   <input type="text" name="FirstName"><br>
   <input type="text" name="LastName" ><br>
-  <input type="submit" value="Sign up">
+  <input type="submit" value="Follow us">
   </form>
   <div class="hr-footer">
     <hr>
