--- a/index.html
+++ b/index.html
@@ -103,17 +103,17 @@
   <div class="text1">
     <img class="image-features" src="image\detail_white.jpg" alt="featureimg">
     <h3>Coffee Hatch</h3>
-    <p>The Barisieur is a premium alarm clock that eases you into </p>
+    <p>Tested by top tea & coffee connoisseurs and the brew has been rated as 5/5 </p>
   </div>
   <div class="text2">
     <img class="image-features" src="image\hand.jpg" alt="featureimg">
     <h3>Alarm Clock</h3>
-    <p>The Barisieur is a premium alarm clock that eases you </p>
+    <p>The Barisieur is a premium alarm clock that eases you into your morning with the soothing sounds of bubbling water along with the smell of the freshly brewed coffee </p>
   </div>
   <div class="text3">
     <img class="image-features" src="image\detail_coffe.jpg" alt="featureimg">
     <h3>Prepareable</h3>
-    <p>The Barisieur is a premium alarm clock that eases you .</p>
+    <p>Water boils in 3-5 mins and pours over the coffee or tea at optimum temperature of 94C</p>
   </div>
 </div>
 </div>
