change text adn image features page

--- a/index.html
+++ b/index.html
@@ -102,18 +102,18 @@
 <div class="text-boxes">
   <div class="text1">
     <img class="image-features" src="image\detail_white.jpg" alt="featureimg">
-    <h3>Coffee Hatch</h3>
-    <p>Tested by top tea & coffee connoisseurs and the brew has been rated as 5/5 </p>
+    <h3>Functions</h3>
+    <p>There is a drawer to store both coffee and tea with an integrated lid and spoon.</p>
   </div>
   <div class="text2">
-    <img class="image-features" src="image\hand.jpg" alt="featureimg">
+    <img class="image-features" src="image\alarmclock.jpg" alt="featureimg">
     <h3>Alarm Clock</h3>
-    <p>The Barisieur is a premium alarm clock that eases you into your morning with the soothing sounds of bubbling water along with the smell of the freshly brewed coffee </p>
+    <p>The Barisieur has a standard alarm to wake you up up in the morning, you can turn the volume up and down for this. </p>
   </div>
   <div class="text3">
-    <img class="image-features" src="image\detail_coffe.jpg" alt="featureimg">
-    <h3>Prepareable</h3>
-    <p>Water boils in 3-5 mins and pours over the coffee or tea at optimum temperature of 94C</p>
+    <img class="image-features" src="image\IMG_1965.jpg" alt="featureimg">
+    <h3>Accessories</h3>
+    <p>The milk vessel cools through a peltier cooler and is activated by an infrared sensor. </p>
   </div>
 </div>
 </div>
