margin between change color button

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <div class="text-white">
       <h3 class="mobile-title">Price 399$</h3>
       <h3 class="desktop-title">White 399$</h3>
-      <p>The Barisieur is a premium alarm clock that eases you into your mods of brewed coffee or.</p>
+      <p>Tested by top tea & coffee connoisseurs and the brew has been rated as 5/5</p>
     </div>
       <button type="button" class="buy-white">Buy</button>
   </div>
@@ -142,7 +142,7 @@
       <img id="theBlack" src="image\black.jpg" alt="black-machine">
       <div class="text-black">
         <h3>Black 399$</h3>
-        <p>The Barisieur is a premium alarm clock that eases you into your mods of brewed coffee or.</p>
+        <p>Tested by top tea & coffee connoisseurs and the brew has been rated as 5/5</p>
       </div>
         <button type="button" class="buy-black">Buy</button>
   </div>
