started to modify footer

--- a/index.html
+++ b/index.html
@@ -164,18 +164,23 @@
   </div>
   <!--------------------video page-->
     <!--------------------footer page-->
-    <div class="footer">
-    <form action="/action_page.php">
-  <input type="text" name="FirstName"><br>
-  <input type="text" name="LastName" ><br>
-  <input type="submit" value="Follow us">
-  </form>
-  <div class="hr-footer">
-    <hr>
-  </div>
+  <div class="footer">
+    <form class="email-form" action="/action_page.php">
+      <input type="email" name="Email" ><br>
+      <input type="text" name="Name" ><br>
+      <input class="submit-button" type="submit" value="Follow us">
+    </form>
+    <div class="hr-footer">
+      <hr>
+    </div>
+    <div class="social-media">
+      <i class="fab fa-twitter-square"></i>
+      <i class="fab fa-instagram"></i>
+      <i class="fab fa-facebook"></i>
+    </div>
   </div>
     <!--------------------footer page end-->
-
+    <script defer src="https://use.fontawesome.com/releases/v5.5.0/js/all.js" integrity="sha384-GqVMZRt5Gn7tB9D9q7ONtcp4gtHIUEW/yG7h98J7IpE3kpi+srfFyyB/04OV6pG0" crossorigin="anonymous"></script>
     <script src="js/script.js" type="text/javascript"></script>
 </body>
 </html>
