Made footer for mobile first

--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
     <!--------------------footer page-->
   <div class="footer">
     <form class="email-form" action="/action_page.php">
-      <input type="email" name="Email" ><br>
-      <input type="text" name="Name" ><br>
+      <input class="input-field" type="email" name="Email" placeholder="Email" ><br>
+      <input class="input-field" type="text" name="Name" placeholder="First Name" ><br>
       <input class="submit-button" type="submit" value="Follow us">
     </form>
     <div class="hr-footer">
